--- a/style.html
+++ b/style.html
@@ -2715,6 +2715,43 @@
             padding: 26px;
             background: color-mix(in srgb, var(--light-color) 80%, white 20%);
         }
+        .wizard-orientacoes-list {
+            display: grid;
+            gap: 10px;
+            padding: 14px;
+            background: color-mix(in srgb, var(--primary-color) 6%, var(--surface-color) 94%);
+            border: 1px solid color-mix(in srgb, var(--primary-color) 20%, transparent);
+            border-radius: 10px;
+            color: var(--text-color);
+            line-height: 1.45;
+        }
+        .wizard-check-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 10px;
+            padding: 12px 16px;
+            border: 1px solid color-mix(in srgb, var(--primary-color) 40%, transparent);
+            border-radius: 10px;
+            background: color-mix(in srgb, var(--primary-color) 10%, var(--surface-color) 90%);
+            color: var(--primary-dark);
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.2s ease;
+            box-shadow: 0 6px 14px rgba(11, 19, 36, 0.05);
+        }
+        .wizard-check-button:hover {
+            background: color-mix(in srgb, var(--primary-color) 16%, var(--surface-color) 84%);
+            transform: translateY(-1px);
+        }
+        .wizard-check-button.active {
+            background: color-mix(in srgb, var(--primary-color) 18%, white 82%);
+            border-color: color-mix(in srgb, var(--primary-color) 45%, transparent);
+            color: var(--primary-color);
+            box-shadow: 0 8px 16px rgba(53, 112, 255, 0.12);
+        }
+        .wizard-check-icon {
+            font-size: 1.25rem;
+        }
         .wizard-loading {
             position: absolute;
             inset: 0;
