--- a/script.html
+++ b/script.html
@@ -2439,7 +2439,7 @@
                     preencherCamposPacienteBaseVitae(resultado.data);
                     atualizarFeedbackBuscaProntuario('Dados encontrados e preenchidos automaticamente.', 'is-success');
                 } else {
-                    atualizarFeedbackBuscaProntuario(resultado?.error || 'Prontuário não localizado na aba Base Vitae 1.', 'is-error');
+                    atualizarFeedbackBuscaProntuario(resultado?.error || 'Prontuário não localizado. Insira Manualmente os dados', 'is-error');
                 }
             } catch (erroBusca) {
                 console.error('Erro ao buscar prontuário na Base Vitae:', erroBusca);
@@ -2482,7 +2482,7 @@
                     termoUltimaBuscaPreencheu = true;
                     atualizarFeedbackBuscaProntuarioTermo('Dados encontrados e preenchidos automaticamente.', 'is-success');
                 } else {
-                    atualizarFeedbackBuscaProntuarioTermo(resultado?.error || 'Prontuário não localizado na aba Base Vitae 1.', 'is-error');
+                    atualizarFeedbackBuscaProntuarioTermo(resultado?.error || 'Prontuário não localizado. Insira Manualmente os dados', 'is-error');
                 }
             } catch (erroBusca) {
                 console.error('Erro ao buscar prontuário na Base Vitae (termo):', erroBusca);
@@ -2894,7 +2894,6 @@
                     const input = evento.target.closest('.termo-volume-photo-input');
                     if (!input || !input.files?.length) return;
                     const item = input.closest('.wizard-volume-item');
-                    const status = item?.querySelector('.volume-photo-status');
                     try {
                         const arquivo = input.files[0];
                         const imagem = await lerArquivoImagemComoBase64(arquivo);
@@ -2902,11 +2901,9 @@
                             item.dataset.fotoBase64 = imagem.base64;
                             item.dataset.fotoMime = imagem.mime;
                             delete item.dataset.fotoUrl;
-                        }
-                        if (status) {
-                            status.textContent = 'Foto anexada para este volume.';
-                            status.classList.add('attached');
-                            status.classList.remove('pending');
+                            const wrapper = item.querySelector('.wizard-volume-photo');
+                            wrapper?.classList.remove('pending');
+                            wrapper?.classList.add('has-photo');
                         }
                         elementos.termoVolumesField?.classList.remove('invalid');
                         salvarRascunhoTermo();
@@ -6985,32 +6982,23 @@
             const grid = document.createElement('div');
             grid.className = 'wizard-volume-grid';
             const fotoWrapper = document.createElement('div');
-            fotoWrapper.className = 'wizard-volume-photo';
+            fotoWrapper.className = 'wizard-volume-photo pending';
             const fotoBotao = document.createElement('button');
             fotoBotao.type = 'button';
             fotoBotao.className = 'btn btn-ghost btn-volume-photo';
             fotoBotao.innerHTML = '<i class="fas fa-camera"></i>';
-            const fotoStatus = document.createElement('span');
-            fotoStatus.className = 'volume-photo-status';
             const fotoInput = document.createElement('input');
             fotoInput.type = 'file';
             fotoInput.accept = 'image/*';
             fotoInput.capture = 'environment';
             fotoInput.className = 'sr-only termo-volume-photo-input';
-            const fotoLabel = document.createElement('span');
-            fotoLabel.textContent = 'Foto do volume';
             if (dados.fotoUrl) {
                 item.dataset.fotoUrl = dados.fotoUrl;
-                fotoStatus.textContent = 'Foto já salva para este volume.';
-                fotoStatus.classList.add('attached');
-            } else {
-                fotoStatus.textContent = 'Foto pendente para este volume.';
-                fotoStatus.classList.add('pending');
+                fotoWrapper.classList.remove('pending');
+                fotoWrapper.classList.add('has-photo');
             }
             fotoWrapper.appendChild(fotoBotao);
-            fotoWrapper.appendChild(fotoLabel);
             fotoWrapper.appendChild(fotoInput);
-            fotoWrapper.appendChild(fotoStatus);
             const colQtd = document.createElement('div');
             colQtd.className = 'wizard-volume-col';
             const labelQtd = document.createElement('label');
