--- a/style.html
+++ b/style.html
@@ -3138,6 +3138,17 @@
             gap: 16px;
             align-items: start;
         }
+        .mov-main-column {
+            display: flex;
+            flex-direction: column;
+            gap: 14px;
+        }
+        .mov-hero-tags {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 8px;
+            margin-top: 8px;
+        }
         .mov-form-grid {
             display: flex;
             flex-direction: column;
@@ -3153,6 +3164,13 @@
             flex-direction: column;
             gap: 10px;
         }
+        .mov-stage-header {
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            gap: 12px;
+            flex-wrap: wrap;
+        }
         .mov-card-header {
             display: flex;
             justify-content: space-between;
@@ -3166,6 +3184,44 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
+        }
+        .mov-flow-steps {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            gap: 10px;
+        }
+        .mov-step {
+            display: flex;
+            gap: 10px;
+            padding: 12px;
+            border-radius: 12px;
+            border: 1px dashed color-mix(in srgb, var(--border-color) 70%, transparent);
+            background: color-mix(in srgb, var(--surface-color) 96%, white 4%);
+            align-items: flex-start;
+        }
+        .mov-step-number {
+            width: 32px;
+            height: 32px;
+            border-radius: 12px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            font-weight: 700;
+            background: color-mix(in srgb, var(--primary-color) 16%, transparent);
+            color: var(--primary-color);
+        }
+        .mov-step.is-active {
+            border-style: solid;
+            border-color: color-mix(in srgb, var(--primary-color) 32%, transparent);
+            box-shadow: 0 10px 20px color-mix(in srgb, var(--primary-color) 12%, transparent);
+            background: color-mix(in srgb, var(--primary-color) 12%, var(--surface-color));
+        }
+        .mov-step.is-complete .mov-step-number {
+            background: color-mix(in srgb, var(--success-color) 24%, transparent);
+            color: color-mix(in srgb, var(--success-dark) 85%, black 15%);
+        }
+        .mov-step.is-muted {
+            opacity: 0.75;
         }
         .mov-card-stack {
             display: flex;
@@ -3345,6 +3401,47 @@
             display: flex;
             flex-direction: column;
             gap: 6px;
+        }
+        .mov-side-panelset {
+            gap: 12px;
+        }
+        .mov-side-tabs {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(0, 1fr));
+            gap: 8px;
+            background: color-mix(in srgb, var(--surface-color) 96%, white 4%);
+            padding: 6px;
+            border-radius: 12px;
+            border: 1px solid color-mix(in srgb, var(--border-color) 70%, transparent);
+        }
+        .mov-side-tab {
+            border: 1px dashed color-mix(in srgb, var(--border-color) 70%, transparent);
+            border-radius: 10px;
+            padding: 10px 12px;
+            background: transparent;
+            font-weight: 700;
+            color: var(--muted-color);
+            transition: all 0.2s ease;
+        }
+        .mov-side-tab:hover,
+        .mov-side-tab:focus-visible {
+            border-color: color-mix(in srgb, var(--primary-color) 30%, transparent);
+            color: var(--primary-color);
+            outline: none;
+        }
+        .mov-side-tab.active {
+            background: color-mix(in srgb, var(--primary-color) 10%, white 90%);
+            border-color: color-mix(in srgb, var(--primary-color) 45%, transparent);
+            color: var(--primary-color);
+            box-shadow: 0 10px 18px color-mix(in srgb, var(--primary-color) 12%, transparent);
+        }
+        .mov-side-panel {
+            display: none;
+            flex-direction: column;
+            gap: 12px;
+        }
+        .mov-side-panel.active {
+            display: flex;
         }
         .movimentacao-itens-list {
             display: flex;
@@ -3575,6 +3672,12 @@
                 justify-content: flex-start;
             }
             .movimentacao-item-row.readonly {
+                grid-template-columns: 1fr;
+            }
+            .mov-flow-steps {
+                grid-template-columns: 1fr;
+            }
+            .mov-side-tabs {
                 grid-template-columns: 1fr;
             }
         }
